src/objects/Shipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Lookup</type>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Carrier Shipments</relationshipLabel>
    <relationshipName>Carrier_Shipments</relationshipName>
</CustomField>