src/objects/Shipment__c/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <label>Destination Country</label>
    <type>Text</type><length>80</length>
</CustomField>