src/objects/Shipment__c/fields/DestinationPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationPostalCode__c</fullName>
    <label>Destination Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>