src/objects/Shipment__c/fields/DestinationRegion__c.field-meta.xml
<CustomField>
    <fullName>DestinationRegion__c</fullName>
    <label>Destination Region</label>
    <type>Text</type><length>80</length>
</CustomField>