src/objects/Shipment__c/fields/EstimatedLeadTimeHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedLeadTimeHours__c</fullName>
    <label>Estimated Lead Time (Hours)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>