src/objects/Shipment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Livraison</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>