src/objects/Shipment__c/fields/ShipDate__c.field-meta.xml
<CustomField>
    <fullName>ShipDate__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>