src/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Statut du cycle de vie de la livraison.</description>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Créée</label>
            </value>
            <value>
                <fullName>In Transit</fullName>
                <label>En transit</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <label>Livrée</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Annulée</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>