src/objects/Shipment__c/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>