src/objects/Shipment__c/fields/ZoneCode__c.field-meta.xml
<CustomField>
    <fullName>ZoneCode__c</fullName>
    <label>Zone Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>